# sample-project

./: readme.org
app-server/: .cljstyle  .dir-locals.el  Makefile  deps.edn  docker-compose.yaml
app-server/.lsp/: config.edn
app-server/dev/src/: dev.clj
app-server/resources/: logback.xml  schema.edn
app-server/src/app_server/: main.clj
app-server/src/app_server/domain/graphql/: schema.clj  user.clj
app-server/src/app_server/infrastructure/: server.clj
app-server/src/app_server/interface/gateway/memory/: board_game.clj
app-server/src/app_server/interface/gateway/sql/: board_game.clj
app-server/src/app_server/util/: error.clj  log.clj  malli_ext.clj  spec_ext.clj
app-server/uberdeps/: package.sh
docs/: algocd.org  dev.org
functions/talking_app_server/: Makefile  main.py  pyproject.toml  requirements.txt
ops/k8s/app-server/: Chart.yaml  Makefile  values.yaml
ops/k8s/app-server/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
ops/k8s/argocd/: Makefile
ops/k8s/what-the-helm/: Makefile
ops/k8s/what-the-helm/templates/: deployment.yaml  service.yaml
ops/terraform/: Makefile  dns.tf  gce.tf  gke.tf  network.tf  provider.tf  pubsub.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
