[tool.poetry]
name = "talking_app_server"
version = "0.1.0"
description = ""
authors = ["MokkeMeguru <meguru.mokke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
gql = {extras = ["aiohttp"], version = "^=3.0.0b0", allow-prereleases = true}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"

[tool.pyright]
venvPath = ".venv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
